fix for border radius and overflow + build

--- a/assets/global/_base.scss
+++ b/assets/global/_base.scss
@@ -36,11 +36,11 @@ a {
 
 .page-body__content {
   min-height: 500px; /* test only */
-  margin-top: rem(-104);
-  padding-top: rem(125);
+  margin-top: rem(-121);
+  padding-top: rem(145);
   background-color: $color__white;
   @include media-breakpoint-up(md) {
-    margin-top: rem(-111);
+    margin-top: rem(-126);
   }
 }
 
